test/spec_vectors/global/fail/module_14.wat
(module (global (import "" "") externref) (global funcref (global.get 0)))